Web Inspector: AXI: no way to expand/collapse sidebar sections with Tab navigation https://bugs.webkit.org/show_bug.cgi?id=208562 <rdar://problem/60028941>
Reviewed by Devin Rousso.

* UserInterface/Views/DetailsSection.css:
(.details-section > .header):
(.details-section > .header::before):
Increase the height of the clickble area so it matches the height
of the header section.

(.details-section .header:focus):
(.details-section .header:focus::before):
Adjust the focus ring around the expand/collapse triangle so it has rounded corners.

* UserInterface/Views/DetailsSection.js:
(WI.DetailsSection):
(WI.DetailsSection.prototype._headerElementClicked):
(WI.DetailsSection.prototype._headerElementMouseDown):
(WI.DetailsSection.prototype._headerElementKeyPress):


Canonical link: https://commits.webkit.org/221667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258058 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DetailsSection.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DetailsSection.css
@@ -48,8 +48,8 @@
 .details-section > .header {
     position: sticky;
     top: var(--details-section-header-top);
-    height: 23px;
-    padding: 4px 0;
+    height: var(--details-section-header-height);
+    padding: var(--details-section-header-vertical-padding) 0;
     -webkit-padding-end: 5px;
     font-size: 11px;
     font-weight: bold;
@@ -61,6 +61,9 @@
 
     /* Ensure the headers are displayed above scrollbars. */
     z-index: var(--z-index-header);
+
+    --details-section-header-height: 23px;
+    --details-section-header-vertical-padding: 4px;
 }
 
 .details-section > .header > .options > .navigation-bar {
@@ -100,12 +103,23 @@ body[dir=rtl] .details-section > .header > .options {
 .details-section > .header::before {
     display: block;
     width: 21px;
-    height: 100%;
+    height: var(--details-section-header-height);
+    margin-top: calc(-1 * var(--details-section-header-vertical-padding));
     content: "";
     background-image: url(../Images/DisclosureTriangles.svg#open-normal);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 13px 13px;
+}
+
+.details-section .header:focus {
+    outline: none;
+}
+
+.details-section .header:focus::before {
+    outline: auto -webkit-focus-ring-color;
+    outline-offset: -5px;
+    border-radius: 9px;
 }
 
 body[dir=rtl] .details-section > .header::before {
